# metamod-plugin

./: .gitignore  .gitmodules  README.md  mmenv.bat
example-cpp-cmake/: CMakeLists.txt  library.cpp  library.h  plugin.vdf.in
example-cpp-cmake/makefiles/: shared.cmake  win32.cmake
